# syntax

./: flake.nix
syntax/: LICENSE.md  syntax.cabal
syntax-attoparsec/: syntax-attoparsec.cabal
syntax-attoparsec/Data/Syntax/Attoparsec/: ByteString.hs  Text.hs
syntax-attoparsec/Data/Syntax/Attoparsec/ByteString/: Lazy.hs
syntax-attoparsec/Data/Syntax/Attoparsec/Text/: Lazy.hs
syntax-example/: syntax-example.cabal
syntax-example-json/: syntax-example-json.cabal
syntax-printer/: syntax-printer.cabal
syntax-printer/Data/Syntax/Printer/: ByteString.hs  Consumer.hs  Text.hs
syntax-printer/Data/Syntax/Printer/ByteString/: Lazy.hs
syntax-printer/Data/Syntax/Printer/Text/: Lazy.hs
syntax/Data/: Syntax.hs
syntax/Data/Syntax/: Char.hs  Combinator.hs  Indent.hs
