cabal-version:       3.0
name:                syntax-attoparsec
version:             1.0.0.0
synopsis:            Syntax instances for Attoparsec.
license:             MIT
license-file:        LICENSE.md
author:              Paweł Nowak
maintainer:          ners <ners@gmx.ch>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/ners/syntax

library
  exposed-modules:     Data.Syntax.Attoparsec.Text
                       Data.Syntax.Attoparsec.Text.Lazy
                       Data.Syntax.Attoparsec.ByteString
                       Data.Syntax.Attoparsec.ByteString.Lazy
  build-depends:       base >= 4 && < 5, syntax >= 1, semi-iso >= 1, attoparsec, text, bytestring, scientific, vector
  default-language:    Haskell2010
  ghc-options: -Wall
