cabal-version:       3.0
name:                syntax-example-json
version:             1.0.0.0
synopsis:            Example JSON parser/pretty-printer.
description:
  Example JSON parser/pretty-printer.
  .
  Source code:
  .
  * <https://github.com/Pawel834/syntax-example-json/blob/7236aefc018ce3d968321b5b85ddcf80b46aeef4/Main.hs Main.hs>
  .
  Example input and output:
  .
  * <https://github.com/Pawel834/syntax-example-json/blob/master/in.json in.json>
  .
  * <https://github.com/Pawel834/syntax-example-json/blob/master/out.json out.json>
license:             MIT
license-file:        LICENSE.md
author:              Paweł Nowak
maintainer:          ners <ners@gmx.ch>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/ners/syntax

executable syntax-example-json
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base <5, semi-iso >= 1, syntax >= 1,
                       syntax-attoparsec >= 1, syntax-printer >= 1,
                       containers, text, scientific, lens, attoparsec
