cabal-version:       3.0
name:                syntax-printer
version:             1.0.0.1
synopsis:            Text and ByteString printers for 'syntax'.
license:             MIT
license-file:        LICENSE.md
author:              Paweł Nowak
maintainer:          ners <ners@gmx.ch>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/ners/syntax

library
  exposed-modules:     Data.Syntax.Printer.Consumer
                       Data.Syntax.Printer.Text
                       Data.Syntax.Printer.Text.Lazy
                       Data.Syntax.Printer.ByteString
                       Data.Syntax.Printer.ByteString.Lazy
  build-depends:       base >= 4.7 && < 5, semi-iso >= 1, syntax >= 1,
                       text, bytestring, scientific >= 0.3, bifunctors, semigroupoids, vector
  default-language:    Haskell2010
  ghc-options:         -Wall
